Mise à jour de la mise en page du site.

--- a/Jeu/CSS/GameJam_Header.css
+++ b/Jeu/CSS/GameJam_Header.css
@@ -91,8 +91,7 @@ li a:hover {
   box-shadow:
   0 11.7px 9.8px -5px rgba(0, 0, 0, 0.278),
   0 23px 33.1px -5px rgba(0, 0, 0, 0.419),
-  0 63px 148px -5px rgba(0, 0, 0, 0.45)
-;
+  0 63px 148px -5px rgba(0, 0, 0, 0.45);
 
 }
 
